feat: upgrade to Java 21, spring 6 and more (#3828)
* Replaced @PostConstruct and @PreDestroy annotations by InitializingBean and DisposableBean interfaces

* Upgrade of GWT, not working!

* feat: java 17 wip

* feat: upgrades orientdb graalvm resteasy (wip)

* first java 17 compile and test

* travis uses java 17

* deps versions fixes

* jaxb

* java 21

* opal-gwt-client removed

* feat: upgraded vfs

* feat: deb control updated with recommended packages

* fix: upgraded slf4j, graal js engine usage to retrieve resourcer settings and utils

* resteasy upgraded to latest

* configure polyglot log

* unzip plugin files in start scripts

* orientdb and atomikos configurations

* fix: ensure mime type on file download

* code cleanup

* do not load datasources concurrently (for now, to avoid liquibase errors)

* removed windows start script because of missing plugins in classpath

* orientdb create index is thread safe

* opal upgrade is done in a separate, preliminary, process, because it was confusing some third party libs

* jgit updated

* makefile updated: removed gwt and update orientdb version